# trivia-multiplayer

./: .gitignore  README.md  debug.txt
ClientApp/: App.xaml.cs  ClientApp.csproj  ClientApp.sln  local.lua
ClientApp/ClientApp/: App.xaml  (+10 more)
M_Trivia/: CMakeLists.txt  M_Trivia.sln  local.lua  trivia_db.sqlite
M_Trivia/.claude/: settings.local.json
M_Trivia/Client&Server/: Client&Server.pyproj  Client.py  Server.py
M_Trivia/ClientApp/: ClientApp.csproj
M_Trivia/ClientServer/: Client.py  ClientServer.pyproj  Server.py
M_Trivia/M_Trivia/: AddAnswerManager.cpp  AddAnswerManager.hpp  ApiClient.cpp  ApiClient.h  CloseRoomResponse.cpp  CloseRoomResponse.hpp  CloseRoomResponseErrors.cpp  CloseRoomResponseErrors.hpp  Communicator.cpp  Communicator.h  Communicator.hpp  CreateRoomRequest.cpp  CreateRoomRequest.hpp  CreateRoomResponse.cpp  CreateRoomResponse.hpp  CreateRoomResponseErrors.cpp  CreateRoomResponseErrors.hpp  CreateRoomResponseStatus.h  EmailSender.cpp  EmailSender.hpp  ErrorResponse.hpp  Game.cpp  Game.hpp  GameData.hpp  GameManager.cpp  GameManager.hpp  GameRequestHandler.cpp  GameRequestHandler.hpp  GameStatus.hpp  GeneralResponseErrors.cpp  GeneralResponseErrors.hpp  GetGameResultsResponse.cpp  GetGameResultsResponse.hpp  GetGameStateResponse.cpp  GetGameStateResponse.hpp  GetHighScoreRequest.cpp  GetHighScoreRequest.hpp  GetHighScoreResponse.cpp  GetHighScoreResponse.hpp  GetPersonalStatisticsResponse.cpp  (+175 more)
TriviaProgramDesign/: RequestsAndResponseRepresentations.drawio.xml  TriviaHighLevelDesignDocument.docx  high_level_design_diagram_trivia.drawio.xml
(+331 files in other folders)
